fix mobile nav collapse

--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -60,7 +60,6 @@
 			display: inline-block;
 		}
 		.nav-collapse {
-			position: fixed;
     		overflow: hidden;
     		background-color: white;
     		top: 120px;
